<resources>
    <string name="app_name">Evenements</string>
    <string name="modifStagiaireTitre">Modification Stagiaire</string>
    <string name="modifStagiaireValidation">Confirmer</string>
    <string name="inscriptionStagiaireTitre">Inscription Stagiaire</string>
    <string name="detailsStagiaireTitre">Details Stagiaire</string>
    <string name="detailsStagiaireLabelNom">Nom :</string>
    <string name="detailsStagiaireLabelAge">Age :</string>
    <string name="detailsStagiaireLabelMail">Mail :</string>
    <string name="detailsStagiaireLabelTel">Tel :</string>
    <string name="detailsStagiaireLabelSession">Session :</string>
    <string name="detailsStagiaireLabelFormation">Formation :</string>
    <string name="detailsStagiaireLabelImage">Image (url) :</string>
    <string name="modifStagiaireErreurChampVide">Merci de remplir tous les champs</string>
    <string name="modifStagiaireErreurChamp">Les champs suivants comportent des erreurs :</string>
    <string name="eventType">Type</string>
    <string name="eventLocation">Lieu</string>
    <string name="ajouterEvenement">Ajouter</string>
    <string name="confirmerEvenement">Confirmer</string>
    <string name="creer_evenement">Créer un événement</string>
    <string name="modifier_evenement">Modifier un événement</string>
    <string name="formation1" translatable="false">Administrateur(trice) Réseaux Junior</string>
    <string name="formation2" translatable="false">Concepteur(trice) d\'Applications Mobiles</string>
    <string name="formation3" translatable="false">Developpeur(se) C/C++/JAVA - Région</string>
    <string name="formation4" translatable="false">Developpeur(se) C/C++/JAVA - Toulouse</string>
    <string name="formation5" translatable="false">Maintenance Support Réseaux</string>
</resources>
