<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifStagiaireActivity">

    <TextView
        android:id="@+id/modifStagiaireTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="28sp"
        android:text="@string/modifStagiaireTitre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/modifStagiaireLabelNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:textSize="20sp"
        android:text="@string/detailsStagiaireLabelNom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireTitle" />

    <TextView
        android:id="@+id/modifStagiaireLabelPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/detailsStagiaireLabelPrenom"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireLabelNom" />

    <TextView
        android:id="@+id/modifStagiaireLabelAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:text="@string/detailsStagiaireLabelAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireLabelPrenom" />

    <TextView
        android:id="@+id/modifStagiaireLabelMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:text="@string/detailsStagiaireLabelMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireLabelAge" />

    <TextView
        android:id="@+id/modifStagiaireLabelTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:text="@string/detailsStagiaireLabelTel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireLabelMail" />

    <TextView
        android:id="@+id/modifStagiaireLabelImage"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/detailsStagiaireLabelImage"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireLabelTel" />

    <TextView
        android:id="@+id/modifStagiaireLabelSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:text="@string/detailsStagiaireLabelSession"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireLabelImage" />

    <TextView
        android:id="@+id/modifStagiaireLabelFormation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:text="@string/detailsStagiaireLabelFormation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireLabelSession" />

    <EditText
        android:id="@+id/modifStagiaireNom"
        android:layout_width="233dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireTitle" />

    <EditText
        android:id="@+id/modifStagiairePrenom"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireNom" />

    <EditText
        android:id="@+id/modifStagiaireAge"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiairePrenom" />

    <EditText
        android:id="@+id/modifStagiaireMail"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireAge" />

    <EditText
        android:id="@+id/modifStagiaireTel"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireMail" />

    <EditText
        android:id="@+id/modifStagiaireImage"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireTel" />

    <Button
        android:id="@+id/modifStagiaireValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/modifStagiaireValidation"
        android:onClick="onValidationClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifStagiaireLabelFormation" />

</android.support.constraint.ConstraintLayout>